--- a/Example/PCVExample/PCVExamplePage.xaml
+++ b/Example/PCVExample/PCVExamplePage.xaml
@@ -1,4 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:PCVExample" x:Class="PCVExample.PCVExamplePage">
-	<Label Text="Welcome to Xamarin Forms!" VerticalOptions="Center" HorizontalOptions="Center" />
+<?xml version="1.0" encoding="utf-8"?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+	xmlns:local="clr-namespace:PCVExample" 
+	xmlns:pcv="clr-namespace:Plugin.PCV;assembly=PageContainerView.Plugin" 
+	x:Class="PCVExample.PCVExamplePage">
+
+	<StackLayout x:Name="stack" Orientation="Horizontal">
+		<Label 
+			Text="left area" 
+			VerticalTextAlignment="Center" />
+		
+		<pcv:PageContainerView 
+			x:Name="pageContainerView"
+			HorizontalOptions="FillAndExpand"
+			VerticalOptions="FillAndExpand" />
+	</StackLayout>
+	
 </ContentPage>
