--- a/Example/PCVExample/PCVExamplePage.xaml
+++ b/Example/PCVExample/PCVExamplePage.xaml
@@ -7,6 +7,7 @@
 
 	<StackLayout x:Name="stack" Orientation="Horizontal" Spacing="0">
 
+		<!-- this 64px margin is a hack for now, it will only work on iOS devices in portrait mode -->
 		<StackLayout Orientation="Vertical" WidthRequest="100" Spacing="0" Margin="0, 64, 0, 0">
 			<BoxView x:Name="tabA" HeightRequest="100" BackgroundColor="Lime">
 				<BoxView.GestureRecognizers>
