Update to Xamarin.Forms 2.3.4.231

--- a/Example/PCVExample/PCVExamplePage.xaml
+++ b/Example/PCVExample/PCVExamplePage.xaml
@@ -20,7 +20,7 @@
 			  	</BoxView.GestureRecognizers>
 			</BoxView>
 
-			<BoxView x:Name="tabC" HeightRequest="100" BackgroundColor="Pink">
+			<BoxView x:Name="tabC" HeightRequest="100" BackgroundColor="Red">
 				<BoxView.GestureRecognizers>
         			<TapGestureRecognizer Tapped="OnTabCTapGestureRecognizerTapped" />
 			  	</BoxView.GestureRecognizers>
